# test-bridge

./: .gitignore
bridge/: Cargo.toml  Makefile
bridge/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
bridge/tests/: bridge_test.rs  token_action.rs
js/: README.md  README.txt  approve-bridge.ts  approve-token.ts  bridge-initialize.ts  bridge-transfer-in.ts  bridge-transfer-out.ts  call-bridge.ts  common.ts  create-token-account.ts  create-token.ts  gen-account.ts  gen-data.ts  index.js  mint-token.ts  misc-test.ts  package-lock.json  package.json  query-balance.ts  reset.ts  sign-tx.ts  transfer-spl.ts  types-test.ts  types.ts
js/data/: localhost.txt
solana-scanner/: go.mod  go.sum  main.go
solana-scanner/types/: transfer_out.go  transfer_out_test.go
